--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   height: 100vh;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: top center;
 }
 
@@ -10,16 +10,20 @@
   height: 50vmin;
 }
 
+.App-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  padding-right: 80px;
+}
+
 .App-content {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  padding: 60px;
-  font-size: calc(10px + 2vmin);
-  font-family: Arial;
-  color: black;
 }
 
 @media (min-width: 650px ) {
