--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  height: 100vh;
   background-size: cover;
   background-repeat: repeat;
   background-position: top center;
@@ -14,8 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-end;
-  padding-right: 80px;
+  align-items: center;
 }
 
 .App-content {
@@ -39,7 +37,7 @@
   }
 
   .App-content {
-      align-items: flex-end;
+      align-items: center;
       justify-content: center;
   }
 }
