--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -42,7 +42,8 @@ h1 {
 }
 
 body {
-  font-family: 'Coming Soon', cursive;
+  font-family: 'Raleway';
+  font-size: 16px;
 }
 
 @media (min-width: 650px ) {
