--- a/src/components/UserUploadedDashboard/UserUploadedDashboard.css
+++ b/src/components/UserUploadedDashboard/UserUploadedDashboard.css
@@ -15,7 +15,6 @@ body {
   min-height: 100vh;
   background-color: #fafafa;
   color: #262626;
-  padding-bottom: 3rem;
 }
 
 img {
@@ -26,6 +25,10 @@ img {
   max-width: 93.5rem;
   margin: 0 auto;
   padding: 0 2rem;
+}
+
+.file-upload {
+  padding: 2rem;
 }
 
 .btn {
