--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,7 +3,6 @@
   background-size: cover;
   background-repeat: repeat;
   background-position: top center;
-  background-color: #f3ecec;
 }
 
 .App-logo {
@@ -27,10 +26,6 @@
 
 .Navigation {
   padding: 5px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
   background-color: #ffffff;
   border-style: none none solid none;
   border-width: 1px;
@@ -39,6 +34,11 @@
 
 h1 {
   font-family: 'Walter Turncoat', cursive;
+}
+
+h2 {
+  font-family: 'Raleway';
+  font-size: 24px;
 }
 
 p {
