--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -46,6 +46,11 @@ p {
   font-size: 16px;
 }
 
+ul, li {
+  font-family: 'Raleway';
+  font-size: 16px;
+}
+
 @media (min-width: 650px ) {
   .App {
       background-position: center center;
